--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ext/SpinalHDL"]
 	path = ext/SpinalHDL
-	url = https://github.com/JunyiLiu1994/SpinalHDL.git
+	url = https://github.com/JunyiLiu1994/SpinalHDL
 	branch = dev
